<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:descendantFocusability="beforeDescendants"
  android:focusableInTouchMode="true"
  android:padding="@dimen/paddingLarge"
  tools:context=".view.auth.LoginActivity">

  <ImageView
    android:id="@+id/logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.638"
    app:srcCompat="@drawable/ic_launcher_foreground" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/lUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:endIconDrawable="@drawable/ic_person"
    app:layout_constraintTop_toBottomOf="@+id/logo">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:imeOptions="actionNext"
      android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/lPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/lUser"
    app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:imeOptions="actionDone"/>
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/btLogin"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/heightButtonSmall"
    android:layout_marginTop="@dimen/marginLarge"
    android:layout_marginRight="@dimen/marginMedium"
    android:background="@xml/bg_green_radius"
    android:onClick="onLogin"
    android:paddingLeft="@dimen/marginLarger"
    android:paddingRight="@dimen/marginLarger"
    android:text="@string/login"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lPassword" />

  <TextView
    android:id="@+id/tRegister"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginLarge"
    android:layout_marginRight="16dp"
    android:text="@string/belumpunyaaccount"
    android:textAlignment="textEnd"
    android:textColor="@android:color/darker_gray"
    android:textSize="@dimen/textMedium"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btLogin"
    app:layout_constraintVertical_bias="0.021" />

</androidx.constraintlayout.widget.ConstraintLayout>